# usndtool

./: .gitignore  CMakeLists.txt  LICENSE  codec.c  hx2.c  hx2.h  stream.c  stream.h  usndtool.c  waveformat.c  waveformat.h
usnd/: adpcm.c  audio.c  audio.h  common.c  common.h  object.h  resource.c  resource.h  usnd.c  usnd.h  vm.c  vm.h  waveformat.c  waveformat.h
